# servicedesk-analyzer

./: .gitignore  Dockerfile  LICENSE  README.md  audit.py  cli.py  demo2_it_helpdesk.csv  demo4_devops_jira.csv  demo5_messy_export.csv  make_demo_samples.py  pyproject.toml  requirements.txt  web_app.py
.github/workflows/: test.yml
docs/: features.md  iterative-improvement.md  local-ai.md  methodology.md  privacy-security.md
examples/: generate_sample.py  sample_servicedesk.csv
examples/sample-reports/: sample_servicedesk-analysis.html  sample_servicedesk-analysis.json  sample_servicedesk-analysis.md  sample_servicedesk-analysis.pptx  sample_servicedesk-analysis.xlsx
sample_data/: make_sample.py  test_polluted.py  test_realworld.py
sample_data/demo/: demo1_pharma_fieldforce.csv  demo3_hr_servicedesk.csv
sda/: __init__.py  analyze.py  app.py  cli.py  executive.py  feedback.py  history.py  ingest.py  integrity.py  iteration.py  metrics.py  mttr.py  narrative.py  normalize.py  opportunities.py  pareto.py  pilots.py  schema.py  themes.py  uat.py  util.py
sda/ai/: __init__.py  base.py  evidence.py  llamacpp.py  service.py
sda/report/: __init__.py  charts.py  excel.py  html.py  json_out.py  markdown.py  pptx.py
sda/rules/: atomicwork.yaml  (+1 more)
sdanalyzer/: __init__.py  analysis.py  loader.py  normalize.py  opportunities.py  quality.py  render_html.py  render_md.py  render_pptx.py  report.py  textclean.py  themes.py
tests/: test_ai.py  test_excel_security.py  test_history.py  test_iteration.py  test_narrative.py  test_pipeline.py  test_reports_iteration.py
(+1 files in other folders)
